--- a/website/i18n/zh/docusaurus-theme-classic/footer.json
+++ b/website/i18n/zh/docusaurus-theme-classic/footer.json
@@ -64,7 +64,7 @@
     "description": "The label of footer link with label=Blog linking to /blog"
   },
   "copyright": {
-    "message": "Copyright © 2023 TQUIC作者 | 文档发布基于CC-BY-4.0授权许可<br> Copyright © 2023 腾讯公司 版权所有 | <a href=https://beian.miit.gov.cn style=\"color:#FFFFFF;\">粤B2-20090059-1892</a> ",
+    "message": "Copyright © 2023 TQUIC作者 | 文档发布基于CC-BY-4.0授权许可<br> Copyright © 2023 腾讯公司 版权所有 <a href=https://beian.miit.gov.cn style=\"color:#FFFFFF;\">粤B2-20090059-1892</a> <img src=\"/zh/img/police.png\" width=\"16\" height=\"16\" style=\"vertical-align: middle\"><a href=\"https://beian.mps.gov.cn/#/query/webSearch?code=44030002001678\" rel=\"noreferrer\" target=\"_blank\" style=\"color:#FFFFFF;\">粤公网安备44030002001678</a>",
     "description": "The footer copyright"
   }
 }
